[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural-storm-graph"
version = "0.1.0"
description = "Real-time relationship graph engine — Storm Skeleton protocol for AI context extraction"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["codegraph", "ast", "code-analysis", "real-time", "ai", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/maxdevv/neural-storm-graph"
Repository = "https://github.com/maxdevv/neural-storm-graph"
Issues = "https://github.com/maxdevv/neural-storm-graph/issues"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
